--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,14 @@
           </li>
         </ul>
       </div>
-      <div class="main-right-wrappe"></div>
+      <div class="main-right-wrappe">
+        <h2>Add your score</h2>
+        <form action="">
+          <input type="text" placeholder="Your name">
+          <input type="text" placeholder="Your score">
+          <button type="submit">submit</button>
+        </form>
+      </div>
     </div>
   </main>
 </body>
