Add the refresh button fonctionality.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div class="main-left-wrappe flex-center">
           <div class="refresh-container flex-between">
             <p>Recent Scores</p>
-            <button>Refresh</button>
+            <button class="refresh">Refresh</button>
           </div>
           <ul class="scores-list flex-center">
            
