Add loading image webpack config.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <button class="refresh">Refresh</button>
           </div>
           <ul class="scores-list flex-center">
-           
+           <img src="./avatar.jpg" alt="" srcset="">
           </ul>
         </div>
         <div class="main-right-wrapper flex-center">
